# Constant

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
constant/: capabilities.py  cli.py  cockpit.py  daemon.py  executors.py  memory.py  paths.py  planner.py  state.py  tui.py
examples/: fleet.example.json  fleet.example.toml
scripts/: Constant  ai-bridge.sh  ai-copy.sh  ai-msg.sh  constant-bootstrap.sh  constant-chat-dock.sh  constant-claude-pane.sh  constant-codex-pane.sh  constant-common.sh  constant-copilot-pane.sh  constant-deploy.sh  constant-fleet-bootstrap.sh  constant-fleet-deploy.sh  constant-fleet-install.sh  constant-fleet.sh  constant-machine-install.sh  constant-machine.sh  constant-remote-tab.sh  constant-tmux-fleet.sh  constant-tmux-machine.sh  constant-tmux-remote-window.sh  constant-vibe-pane.sh  zellij-ai-bootstrap.sh  zellij-ai-claude-pane.sh  zellij-ai-codex-pane.sh  zellij-ai-common.sh  zellij-ai-copilot-pane.sh  zellij-ai-fleet-deploy.sh  zellij-ai-fleet-install.sh  zellij-ai-fleet.sh  zellij-ai-machine-install.sh  zellij-ai-remote-tab.sh  zellij-ai-triple.sh  zellij-ai-vibe-pane.sh
src/: buddy.rs  capabilities.rs  chat.rs  cockpit.rs  config.rs  executor.rs  fleet.rs  main.rs  memory.rs  mission.rs  operator.rs  paths.rs  state.rs  tui.rs
tests/: cli_cutover.rs
