[package]
name = "constant"
version = "0.1.0"
edition = "2024"
description = "Rust front-controller for the Constant AI cockpit"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
crossterm = "0.28"
ratatui = "0.29"

[[bin]]
name = "constant"
path = "src/main.rs"
